key-generator-service/infra/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: key-generator
  name: key-generator
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
      name: http
  selector:
    app: key-generator
  type: NodePort
