key-generator-service/infra/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: key-generator
spec:
  hosts:
  - "*"
  http:
  - match:
    - uri:
        prefix: /key/init
    route:
      - destination:
          port:
            number: 80
          host: key-generator.default.svc.cluster.local
  gateways:
  - microservice-gateway
